@@ -1,13 +1,14 @@
 readsb (3.7.4~dev) UNRELEASED; urgency=medium
 
   * In development
+  * Replace obsolete usleep in POSIX 2008 with nanosleep.
   * Improvements to position filtering and relative decoding.
   * Position decoding bugfixes.
   * When generating aircraft.json, leave space for the final line.
   * Forward alert and spi bits to web application.
   * Added support for GNS5894 receiver hardware.
 
- -- Michael Wolf <michael@mictronics.de>  Tue, 03 Sep 2019 19:06:34 +0200
+ -- Michael Wolf <michael@mictronics.de>  Mon, 25 Nov 2019 19:17:46 +0200
 
 readsb (3.7.3) stable; urgency=medium
 
